# flma

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  SCHEMA.md  noxfile.py  pyproject.toml
.claude/skills/factorio-dev/: SKILL.md
.claude/skills/factorio-live/: SKILL.md
.claude/skills/factory-planner/: SKILL.md
.claude/skills/mod-release/: SKILL.md
.github/workflows/: ci.yml  release.yml
dev/: CLAUDE.md  env.sh  rcon.py  server-settings.json  start-client.sh  start-server.sh  status.sh  stop.sh  summary.py  sync_mods.py
mod/: CLAUDE.md  changelog.txt  control.lua  info.json  settings.lua
mod/locale/en/: settings.cfg
planner/: CLAUDE.md  __init__.py  __main__.py  _recipe_mcp_loader.py  cli.py  config.py  live_state.py  module_bonus.py  observe.py  options.py  recommend.py  techbundle.py  throughput.py
planner/recipedb/: __init__.py  build_db.py  db.py  engine.py
src/: CLAUDE.md  config.py  game_state.py  server.py
tests/agent_eval/: mlflow_trace.py  run_agent_eval.py
tests/eval/: test_pick_producer_golden.py
tests/unit/: test_build_db.py  test_cli.py  test_expand.py  test_game_state.py  test_live_state.py  test_machines.py  test_module_bonus.py  test_observe.py  test_options.py  test_recommend.py  test_tech.py  test_techbundle.py  test_throughput.py  test_tools.py
